# word-count-investigation

./: .gitignore  Makefile  pyproject.toml  setup.py
experiments/: __init__.py  custom_decoding.py  experiments.py  fine_tuning.py  metrics.py  prompt_templates.py  tasks.py  word_count_control.py
lib/: logging.py
notebooks/: 1_Naive Approach GPT 3_5 Pipeline.ipynb  1_Naive_Approach_GPT_3_5_Pipeline.ipynb  2_Fine_tuning_for_Word_Counts.ipynb  3_Custom_Decoding_Step.ipynb  4_Chaining_Pipeline.ipynb  5_Custom_Decoder_+_Chaining_Pipeline.ipynb
tests/: __init__.py  conftest.py  requirements.txt  test_custom_decoding.py  test_experiments.py  test_fine_tuning.py  test_metrics_and_tasks.py  test_prompt_templates.py
